--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mirror",
   "version": "1.0.0",
-  "description": "A wrapper round jsDOM for testing and checking styles.",
+  "description": "A testing library using puppeteer to assert rendered styles.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +17,6 @@
   "author": "stephen pal-george",
   "license": "ISC",
   "dependencies": {
-    "jsdom": "^16.5.2"
+    "puppeteer": "^8.0.0"
   }
 }
